ejercicio3-2a.html edited

--- a/LMSGI/T2/P4/index.html
+++ b/LMSGI/T2/P4/index.html
@@ -7,8 +7,8 @@
     <title>Ejercicio3-2</title>
 </head>
 <body>
-    <h1>Pagina Inicial del sitio Web: Ejercicio3-2</h1>
-    <p>Aqui se incluiria el contenido de la pagina</p>
+    <h1>Página Inicial del sitio Web: Ejercicio3-2</h1>
+    <p>Aquí se incluiría el contenido de la página</p>
 
     <a href="ejercicio3-2a.html">Ejercicio3-2a</a><br>
     <a href="ejercicio3-2b.html">Ejercicio3-2b</a>
