--- a/LMSGI/T2/P4/index.html
+++ b/LMSGI/T2/P4/index.html
@@ -10,7 +10,7 @@
     <h1>Página Inicial del sitio Web: Ejercicio3-2</h1>
     <p>Aquí se incluiría el contenido de la página</p>
 
-    <a href="ejercicio3-2a.html">Ejercicio3-2a</a><br>
-    <a href="ejercicio3-2b.html">Ejercicio3-2b</a>
+    <a href="paginas/ejercicio3-2a.html">Ejercicio3-2a</a><br>
+    <a href="paginas/ejercicio3-2b.html">Ejercicio3-2b</a>
 </body>
 </html>
