Change index name for ejercicio3-2.html
I've also edited ejercicio3-2a.html and ejercicio3-2b.html so they can work with that name.

--- a/LMSGI/T2/P4/paginas/ejercicio3-2a.html
+++ b/LMSGI/T2/P4/paginas/ejercicio3-2a.html
@@ -10,6 +10,6 @@
     <h1>Página Ejercicio3-2a</h1>
     <p>Aqui se incluiria el contenido de la pagina</p>
 
-    <a href="index.html">Volver a la pagina Inicial</a>
+    <a href="../ejercicio3-2.html">Volver a la pagina Inicial</a>
 </body>
 </html>
