--- a/LMSGI/T3/P3/ejercicio3-3.html
+++ b/LMSGI/T3/P3/ejercicio3-3.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Listas desordenadas</h1>
     <ul>
-        <li>Elemento 1</li>
-        <li>Elemento 2</li>
-        <li>Elemento 3</li>
-        <li>Elemento 4</li>
+        <li>Acceso a <a href="https://www.google.com">Google</a></li>
+        <li>Acceso a <a href="https://www.microsoft.com">Microsoft</a></li>
+        <li>Acceso a <a href="https://es.yahoo.com">Yahoo</a></li>
+        <li>Acceso a <a href="https://www.w3.org/">W3C España</a></li>
     </ul>
 </body>
 </html>
