--- a/LMSGI/T4/P1/ejercicio4-1.html
+++ b/LMSGI/T4/P1/ejercicio4-1.html
@@ -8,32 +8,32 @@
 </head>
 <body>
     <h1>Tabla comparativa de animales</h1>
-    <table bgcolor="black">
-        <tr bgcolor="white" align="center">
+    <table cellpadding="10" cellspacing="0" border="1.5">
+        <tr align="center">
             <th colspan="4">DIFERENCIAS ENTRE EL PERRO Y EL GATO</th>
         </tr>
-        <tr bgcolor="white" align="center">
+        <tr align="center">
             <td rowspan="2">CARACTERISTICAS</th>
             <th colspan="2">PERRO</th>
             <th rowspan="2">GATO</th> 
         </tr>
-        <tr bgcolor="white" align="center">
+        <tr align="center">
             <th>PEQUEÑO</th>
             <th>GRANDE</th>
         </tr>
-        <tr bgcolor="white" align="center">
+        <tr align="center">
             <td>Duración de crecimiento</td>
             <td>10 meses</td>
             <td>18 a 24 meses</td>
             <td>6 o 7 meses</td>
  
         </tr>
-        <tr bgcolor="white" align="center">
+        <tr align="center">
             <td>Tiempo de gestación</td>
             <td colspan="2">58 a 63 dias</td>
             <td>64 A 67 dias</td>
         </tr>
-        <tr bgcolor="white" align="center">
+        <tr align="center">
             <td>Duración de vida del pelo (Muda)</td>
             <td colspan="2">1 año</td>
             <td>6 meses</td>
