--- a/LMSGI/T4/P2/index.html
+++ b/LMSGI/T4/P2/index.html
@@ -12,7 +12,7 @@
         <b>Datos del Cliente:</b><br>
         <div>
             <label for="email">Correo Electrónico</label>
-            <input name="email" id="email" type="text">
+            <input name="email" id="email" type="email">
         </div>
         <div>
             <label for="password">Contraseña</label>
@@ -67,7 +67,7 @@
             <label for="get-info">Acepto recibir información publicitaria</label>
             <br><br>
         </div>
-        <button>Enviar pedido</button><button>Cancelar</button>
+        <input type="submit" value="Enviar"><button>Cancelar</button>
     </form>
     <img src="img/imagen1.jpg" alt="Mi imagen">
 </body>
