--- a/LMSGI/T2/P2/index.html
+++ b/LMSGI/T2/P2/index.html
@@ -23,5 +23,6 @@
     <h2>Líneas horizontales</h2>
     <hr>
     <p>Suelen utilizarse las <font color="blue">líneas horizontales</font> para introducir una separación</p>
+    <img src="img/samvalentin.jpg" alt="Feliz Sam Va Lentin">
 </body>
 </html>
