--- a/LMSGI/T3/P1/index.html
+++ b/LMSGI/T3/P1/index.html
@@ -24,7 +24,7 @@
     <br>
   
     <h2>Primera ancla local</h2>
-    <a href="#">Ir al inicio de la pagina</a>
+    <a for="#">Ir al inicio de la pagina</a>
     <br>
     <br>
     <br>
