--- a/LMSGI/T5/P10/ejercicio5-2.html
+++ b/LMSGI/T5/P10/ejercicio5-2.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio3-2</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
     <h1>Página Inicial del sitio Web: Ejercicio3-2</h1>
     <p>Aquí se incluiría el contenido de la página</p>
 
-    <a href="paginas/ejercicio3-2a.html">Ejercicio3-2a</a><br>
+    <a href="paginas/ejercicio3-2a.html" style="color:brown">Ejercicio3-2a</a><br>
     <a href="paginas/ejercicio3-2b.html">Ejercicio3-2b</a>
 </body>
 </html>
