--- a/LMSGI/T5/P10/paginas/ejercicio3-2a.html
+++ b/LMSGI/T5/P10/paginas/ejercicio3-2a.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio3-2a</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <style>
+        body{
+            margin: 0px;
+        }
+        h1{
+            margin-left: 50%;
+            
+        }
+    </style>
 </head>
 <body>
     <h1>Página Ejercicio3-2a</h1>
-    <p>Aqui se incluiria el contenido de la pagina</p>
+    <p style="color:blueviolet">Aqui se incluiria el contenido de la pagina</p>
 
-    <a href="../ejercicio3-2.html">Volver a la pagina Inicial</a>
+    <a href="../ejercicio5-2.html">Volver a la pagina Inicial</a>
 </body>
 </html>
