--- a/LMSGI/T5/P10/paginas/ejercicio3-2b.html
+++ b/LMSGI/T5/P10/paginas/ejercicio3-2b.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio3-2b</title>
+    <style>
+        p{
+            font-family: 'Courier New', Courier, monospace;
+        }
+    </style>
+    <link rel="stylesheet" href="../css/styles.css">
+    
 </head>
 <body>
     <h1>Página Ejercicio3-2b</h1>
     <p>Aqui se incluiria el contenido de la pagina</p>
 
-    <a href="../ejercicio3-2.html">Volver a la pagina Inicial</a>
+    <a href="../ejercicio5-2.html">Volver a la pagina Inicial</a>
 </body>
 </html>
