--- a/LMSGI/T6/P1/index.html
+++ b/LMSGI/T6/P1/index.html
@@ -9,15 +9,24 @@
 </head>
 <body>
     <div>
-        <div class="header">
-            <h1 class="title">Lorem ipsum</h1>
-        </div>
-
-        <div>
-
-            <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="container">
+            <div class="header">
+                <h1 class="title">Lorem ipsum</h1>
+            </div>
+            <div class="quote">
+                <p>"Cuanto mayor es la dificultad, mayor es la gloria" Cicerón (106 a.c. -43 a.c.)</p>
+                <p>Marco Tulio Cicerón. Escritor, orador y politico romano</p>
+            </div>
+            <div class="text">
+                <h2>De finibus bonorum et malorum </h2>
+                <p><i>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</i></p>
+                <p>Lorem ipe delor sit amet, consectetur adipiscing elit, sed crusmod tempor incidunt ut labore et dolore magna alqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris no ut aliquid ex es commodi consequat. Quis aute are sepuhmrest in voluptate velit esse cillum dolore eu fugiat nulla Excepteur sint chearcat cupidatat non proident, sunt in culpa qui officia deserunt mollit and est laborum </p>
+                <p>Lorem ipe delor sit amet, consectetur adipiscing elit, sed crusmod tempor incidunt ut labore et dolore magna alqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris no ut aliquid ex es commodi consequat. Quis aute are sepuhmrest in voluptate velit esse cillum dolore eu fugiat nulla Excepteur sint chearcat cupidatat non proident, sunt in culpa qui officia deserunt mollit and est laborum </p>
+                <p>El profesor de filologia lisica Richard McChanock apunta que el uso de este testo se remonts a los impresores de comienzos del siglo XVT Su uso en algunos editores de testa muy conocidos ha dada al texto form, sum nueva popularidad en la actual </p>
+                <p>El texto en si no time sentido, aunque no es completamente aleatorio, sino que deriva de un texto de Cicerón en Iragua latina, a cuyas palabras se les han eliminado silabas o letras El significado del texto es inelevante, ya que solo se trata de uma demostración o prueba, pero se spiza en la obra de Ciceron "De finibus bonorum et malorum" (Sobre los limites del bien y del mal) </p>
+            </div>
+            <div class="footer">
+                <p>2005-2016. Mi pagina web</p>
             </div>
 
         </div>
