--- a/LMSGI/T6/P2/index.html
+++ b/LMSGI/T6/P2/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="header">
         <h1><a>Mi sitio web</a></h1>
     </div>
     <div class="content">
-        <div class="navbar"></div>
+        <div class="navbar">
+            <a>Inicio</a>
+            <a>Blog</a>
+            <a>Sobre mi</a>
+            <a>Fotos</a>
+            <a>PortFolio</a>
+            <a>Contacto</a>
+            <a>Enlaces</a>
+        </div>
         <div class="container">
             <div class="cards">
                 <div class="card"></div>
