Article flex added + article-title edited

--- a/LMSGI/T6/P2/index.html
+++ b/LMSGI/T6/P2/index.html
@@ -22,10 +22,54 @@
         </div>
         <div class="container">
             <div class="cards">
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="article">
+                    <h2 class="article-title">Lorem ipsum dolor sit amet</h2>
+                    <div class="article-options">
+                        <span>dd-mm-aaaa 00:00</span>
+                        <a>diseño</a>
+                        <a>Nombre Apellido</a>
+                        <a>Añadir comentario</a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+                        <a>Seguir Leyendo</a>
+                    </div>
+                </div>
+                <div class="article">
+                    <h2 class="article-title">Lorem ipsum dolor sit amet</h2>
+                    <div class="article-options">
+                        <span>dd-mm-aaaa 00:00</span>
+                        <a>diseño</a>
+                        <a>Nombre Apellido</a>
+                        <a>Añadir comentario</a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+                        <a>Seguir Leyendo</a>
+                    </div>
+                </div>
             </div>
-            <div class="menu"></div>
+            <div class="menu">
+                <div class="sobre-mi">
+                    <h4 class="menu-title">Sobre mi</h4>
+                    <p>Nombre Apellido</p>
+                    <p>Edad</p>
+                    <p>Ciudad de residencia</p>
+                    <p>Mi perfil publico</p>
+                </div>
+                <div class="categorias">
+                    <h4 class="menu-title">Categorias</h4>
+                    <p>Categoria 1</p>
+                    <p>Categoria 2</p>
+                    <p>Categoria 3</p>
+                    <p>Categoria 4</p>
+                    <p>Categoria 5</p>
+                </div>
+                <div class="enlaces">
+                    <h4 class="menu-title">Enlaces</h4>
+                    <p>Enlace 1</p>
+                    <p>Enlace 2</p>
+                    <p>Enlace 3</p>
+                    <p>Enlace 4</p>
+                    <p>Enlace 5</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer"></div>
