--- a/LMSGI/T6/P2/index.html
+++ b/LMSGI/T6/P2/index.html
@@ -23,26 +23,28 @@
         <div class="container">
             <div class="cards">
                 <div class="article">
-                    <h2 class="article-title">Lorem ipsum dolor sit amet</h2>
+                    <h2 class="article-title"><a href="#">Lorem ipsum dolor sit amet</a></h2>
                     <div class="article-options">
                         <span>dd-mm-aaaa 00:00</span>
-                        <a>diseño</a>
-                        <a>Nombre Apellido</a>
-                        <a>Añadir comentario</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
-                        <a>Seguir Leyendo</a>
+                        <a href="#">diseño</a>
+                        <a href="#">Nombre Apellido</a>
+                        <a href="#">Añadir comentario</a>
+                        
                     </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+                    <a class="seguir-leyendo" href="#">Seguir Leyendo</a>
                 </div>
                 <div class="article">
                     <h2 class="article-title">Lorem ipsum dolor sit amet</h2>
                     <div class="article-options">
                         <span>dd-mm-aaaa 00:00</span>
-                        <a>diseño</a>
-                        <a>Nombre Apellido</a>
-                        <a>Añadir comentario</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
-                        <a>Seguir Leyendo</a>
+                        <a href="#">diseño</a>
+                        <a href="#">Nombre Apellido</a>
+                        <a href="#">Añadir comentario</a>
+                        
                     </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+                    <a class="seguir-leyendo" href="#">Seguir Leyendo</a>
                 </div>
             </div>
             <div class="menu">
@@ -72,6 +74,8 @@
             </div>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <footer> # 200x Nombre de empresa</footer>
+    </div>
 </body>
 </html>
