menu and sobre-mi edited

--- a/LMSGI/T6/P2/index.html
+++ b/LMSGI/T6/P2/index.html
@@ -49,14 +49,14 @@
             </div>
             <div class="menu">
                 <div class="sobre-mi">
-                    <h4 class="menu-title">Sobre mi</h4>
+                    <h4 class="menu-title"><b>Sobre mi</b></h4>
                     <p>Nombre Apellido</p>
                     <p>Edad</p>
                     <p>Ciudad de residencia</p>
                     <p>Mi perfil publico</p>
                 </div>
                 <div class="categorias">
-                    <h4 class="menu-title">Categorias</h4>
+                    <h4 class="menu-title"><b>Categorias</b></h4>
                     <p>Categoria 1</p>
                     <p>Categoria 2</p>
                     <p>Categoria 3</p>
@@ -64,7 +64,7 @@
                     <p>Categoria 5</p>
                 </div>
                 <div class="enlaces">
-                    <h4 class="menu-title">Enlaces</h4>
+                    <h4 class="menu-title"><b>Enlaces</b></h4>
                     <p>Enlace 1</p>
                     <p>Enlace 2</p>
                     <p>Enlace 3</p>
