categorias and enlaces finished

--- a/LMSGI/T6/P2/index.html
+++ b/LMSGI/T6/P2/index.html
@@ -35,7 +35,7 @@
                     <a class="seguir-leyendo" href="#">Seguir Leyendo</a>
                 </div>
                 <div class="article">
-                    <h2 class="article-title">Lorem ipsum dolor sit amet</h2>
+                    <h2 class="article-title"><a href="#">Lorem ipsum dolor sit amet</a></h2>
                     <div class="article-options">
                         <span>dd-mm-aaaa 00:00</span>
                         <a href="#">diseño</a>
@@ -65,11 +65,11 @@
                 </div>
                 <div class="enlaces">
                     <h4 class="menu-title"><b>Enlaces</b></h4>
-                    <p>Enlace 1</p>
-                    <p>Enlace 2</p>
-                    <p>Enlace 3</p>
-                    <p>Enlace 4</p>
-                    <p>Enlace 5</p>
+                    <a href="#">Enlace 1</a>
+                    <a href="#">Enlace 2</a>
+                    <a href="#">Enlace 3</a>
+                    <a href="#">Enlace 4</a>
+                    <a href="#">Enlace 5</a>
                 </div>
             </div>
         </div>
