blog-p font-size reduced and padding-right added

--- a/LMSGI/T6/P2/index.html
+++ b/LMSGI/T6/P2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <h1><a>Mi sitio web</a></h1>
+        <h1><a href="#">Mi sitio web</a></h1>
     </div>
     <div class="content">
         <div class="navbar">
@@ -31,7 +31,7 @@
                         <a href="#">Añadir comentario</a>
                         
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+                    <p class="blog-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
                     <a class="seguir-leyendo" href="#">Seguir Leyendo</a>
                 </div>
                 <div class="article">
@@ -43,7 +43,7 @@
                         <a href="#">Añadir comentario</a>
                         
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
+                    <p class="blog-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p>
                     <a class="seguir-leyendo" href="#">Seguir Leyendo</a>
                 </div>
             </div>
