--- a/LMSGI/2do Examen/Practica 5/Clase1/index.html
+++ b/LMSGI/2do Examen/Practica 5/Clase1/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="JS/Ejercicio1.js"></script>
+    <script type="text/javascript" src="JS/Ejercicio1.js"></script>
 </body>
 </html>
