Added new functionality. Text can be lined-through
 if checkbox is clicked text inside the list will be lined-through

--- a/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.2/index.html
+++ b/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.2/index.html
@@ -5,13 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 8.2</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <ul id="list">
-
-    </ul>
-    <button id="add_element">Add Element</button>
-    <button id="delete_last_element">Add Element</button>
+    <div class="to_do_list_cont">
+        <h1>My ToDo List</h1>
+        <div class="my_list">
+            <ul id="list">
+                <li>
+                    <input type="checkbox">
+                    Hola
+                </li>
+            </ul>
+            <button id="add_element">Add Element</button>
+            <button id="delete_last_element">Add Element</button>
+        </div>
+        
+    </div>
+    
     <script type="text/javascript" src="js/ejercicio8-2.js"></script>
 </body>
 </html>
