Ejercicio Clase 6 and Ejercicio-Final created

--- a/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.3/index.html
+++ b/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.3/index.html
@@ -7,9 +7,12 @@
     <title>Practica 8-3</title>
 </head>
 <body>
-    <textarea id="counter"></textarea>
-    <button id="start_counter">Iniciar Contador.</button>
-    <button id="stop_counter">Detener Contador</button>
-    <script type="text/javascript" src="js/ejercicio8-3.js"></script>
+    <div class="container">
+        <textarea id="counter"></textarea>
+        <button id="start_counter">Iniciar Contador.</button>
+        <button id="stop_counter">Detener Contador</button>
+        <button id="start_game">¿Quieres jugar videojuegos?</button>
+        <script type="text/javascript" src="js/ejercicio8-3.js"></script>
+    </div>
 </body>
 </html>
