Ejercicio-Final create and delete columns functions added

--- a/LMSGI/2nd Term/Practica 5/Practica/Ejercicio-Final/index.html
+++ b/LMSGI/2nd Term/Practica 5/Practica/Ejercicio-Final/index.html
@@ -7,14 +7,16 @@
     <title>Ejercicio Final</title>
 </head>
 <body>
-    <label for="miInput">Cambiar Texto</label>
-    <input type="text" id="miInput">
+    <label for="myInput">Cambiar Texto</label>
+    <input type="text" id="myInput">
     <button>Cambiar texto</button>
-    <button>Borrar Fila</button>
-    <button>Inserta Fila</button>
+    <button id="delete-row">Borrar Fila</button>
+    <button id="insert-column">Inserta Fila</button>
 
-    <table>
-        
+    <table id="myTable">
+
     </table>
+
+    <script type="text/javascript" src="js/ejercicio-final.js"></script>
 </body>
 </html>
