Finished ejercicio-final

--- a/LMSGI/2nd Term/Practica 5/Practica/Ejercicio-Final/index.html
+++ b/LMSGI/2nd Term/Practica 5/Practica/Ejercicio-Final/index.html
@@ -9,7 +9,7 @@
 <body>
     <label for="myInput">Cambiar Texto</label>
     <input type="text" id="myInput">
-    <button>Cambiar texto</button>
+    <button id="change-text">Cambiar texto</button>
     <button id="delete-row">Borrar Fila</button>
     <button id="insert-column">Inserta Fila</button>
 
