--- a/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.3/index.html
+++ b/LMSGI/2nd Term/Practica 5/Practica/Ejercicio 8.3/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <textarea id="counter"></textarea>
+        <textarea id="counter" readonly></textarea>
         <button id="start_counter">Iniciar Contador.</button>
         <button id="stop_counter">Detener Contador</button>
         <button id="start_game">¿Quieres jugar videojuegos?</button>
