--- a/LMSGI/Trash/MyBoat/index.html
+++ b/LMSGI/Trash/MyBoat/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="text/javascript" src="js/boat.js"></script>
+    <script src="js/listOfBoats.js"></script>
+    <script src="js/boat.js"></script>
+    <script src="js/game.js"></script>
 </body>
-</html>
